# aedvent

./: .gitignore  README.md
c/: run.sh
c/src/: 24-01.c  24-02.c  common.h
c/src/2024/: 01.c  02.c  03.c  04.c  05.c  06.c  07.c
c/src/2024/common/: ascii.h  result.h
c/src/aelibc/: all.h  arena.h  array.h  base.h  number.h  string.h
src/c/: run.sh
src/c/2024/: day03.c  day05.c  day06.c  day07.c  day08.c  day09.c
src/c/2024/common/: ascii.h  vector.h
src/c/aelibc/: all.h  base.h  log.h  number.h  string.h  table.h
src/js/y2021/: day01.js  day02.js  utils.js
src/python/: check.sh  pyproject.toml  run.sh
src/python/2023/: day01.py  day02.py  day03.py  utils.py
src/python/y2023/: day01.py  day02.py  day03.py  utils.py
src/rust/2022/: day01.rs  day02.rs  day03.rs  main.rs
